# crabfin

./: .gitignore  Cargo.toml  LICENSE  README.md
.zed/: settings.json
src/: api.rs  app.rs  config.rs  error.rs  main.rs  state.rs  views.rs
src/auth/: mod.rs  session.rs  token.rs
src/client/: api.rs  client.rs  error.rs  http.rs  manager.rs  mod.rs
src/components/: mod.rs  password_input.rs
src/models/: api.rs  config.rs  jellyfin.rs  media.rs  mod.rs  request.rs  response.rs  server.rs  user.rs
src/services/: library.rs  manager.rs  mod.rs  playback.rs  settings.rs
src/ui/: components.rs  mod.rs  theme.rs  views.rs  window.rs
src/ui/components/ui/: button.rs  checkbox.rs  mod.rs  text_input.rs
src/ui/features/: add_server.rs  auth.rs  logged_in.rs  mod.rs  server_selection.rs
src/ui/screens/: add_server.rs  server_selection.rs
src/ui/theme/: access.rs  animation.rs  color.rs  compat.rs  context.rs  extractor.rs  manager.rs  material_colors.rs  mod.rs  palette.rs  settings.rs  settings_ui.rs  wallpaper_monitor.rs
src/utils/: error.rs  logging.rs  mod.rs  time.rs
src/views/: add_server.rs  login.rs  mod.rs  server_list.rs
