[package]
name = "Crabfin"
version = "0.1.0"
edition = "2024"
description = "A native Jellyfin client built with Rust and GPUI"
license = "MIT"
repository = "https://github.com/sayeed205/crabfin"
authors = ["Sayed Ahmed <sayeed205@gmail.com>"]

[dependencies]
# UI Framework
gpui = { git = "https://github.com/zed-industries/zed" }
smallvec = "1"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# HTTP Client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error Handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
